# RoboMime

./: README.md  requirements.txt
MotionVisualizer/: configuration.json
MotionVisualizer/MotionVisualizer_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets  sharedassets0.assets.resS
Python_Scripts/: kinect_joint_orientations.py  motion_visualizer_updater.py  robot_motion_updater.py  send_angles_to_robovie.py
TeleoperationInterface/: AuthenticTeleoperation.sln
TeleoperationInterface/Core/: AuthenticTeleoperation.Core.csproj
TeleoperationInterface/Core/Messages/: MediaBuffer.cs  MediaBufferPool.cs  Message.cs  MsgType.cs
TeleoperationInterface/Core/Properties/: AssemblyInfo.cs
TeleoperationInterface/Core/Robots/: Robovie.cs
TeleoperationInterface/MediaPlayer/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MediaPlayer.csproj
TeleoperationInterface/MediaPlayer/Media/: MediaController.cs  MediaConverter.cs  MediaData.cs  MediaDataReader.cs  MediaDataWriter.cs  (+2 more)
TeleoperationInterface/UnityInterface/: UpgradeLog.htm  configuration.json
TeleoperationInterface/ssproxy/: CMakeLists.txt  package.xml
TeleoperationInterface/ssproxy/launch/: avtest.launch  camera.launch  microphone.launch  speaker.launch
TeleoperationInterface/ssproxy/scripts/: AudioCapture.py  AudioPlayback.py  Configuration.py  HumanTracking.py  NetClient.py  NetServer.py  PacketManager.py  RobotCmdVel.py  RobotOdometry.py  RobotTracking.py  Serialization.py  UdpClient.py  UdpConnection.py  UdpServer.py  VelodynePoints.py  VideoCapture.py
(+69 files in other folders)
